2007-07-05  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed the hack, added erase(), push_back() & size() methods
	* gameswf/gameswf_as_classes/as_array.h,
	* gameswf/gameswf_as_classes/as_array.cpp
	Implemented AsBroadcaster
	* gameswf/gameswf_action.cpp
	* gameswf/gameswf_as_classes/as_broadcaster.cpp: new
	* gameswf/gameswf_as_classes/as_broadcaster.h: new
	* gameswf/gameswf_object.h: protected addProperty method
	* gameswf/gameswf_value.cpp: fixed operator== of as_value() for OBJECT
	Testcase for AsBroadcaster
	* gameswf/samples/test_broadcaster.fla
	* gameswf/samples/test_broadcaster.swf
	* gameswf/win32/VC8/gameswf.vcproj: updated
	* NEWS: updated

2007-07-04  Thatcher Ulrich <tu@tulrich.com>
	* gameswf/gameswf_sound_handler_sdl.h: Small compile fix.

2007-07-04  Thatcher Ulrich <tu@tulrich.com>
	Implemented the remaining String methods.  Fixed the String method
	dispatch.  Made test_string much more comprehensive and fixed a
	bunch of corner cases.

2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed a some sound bugs that show one's worth
	when sound driver is not installed
	* gameswf/gameswf.h
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_sound.cpp
	* gameswf/gameswf_sound_handler_sdl.cpp
	* gameswf/gameswf_sound_handler_sdl.h

2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>

	A bit cleanup 
	* gameswf/gameswf_types.cpp

2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>

	Fixed get_bound() bug that show one's worth during rotation
	* gameswf/gameswf_types.cpp

2007-07-03  Vitaly Alexeev <tishka92@yahoo.com>
		
	Cleanup of get_bound() stuff
	* gameswf/gameswf.h
	* gameswf/gameswf_button.cpp
	* gameswf/gameswf_button.h
	* gameswf/gameswf_character.cpp
	* gameswf/gameswf_character.h
	* gameswf/gameswf_freetype.cpp
	* gameswf/gameswf_impl.cpp
	* gameswf/gameswf_impl.h
	* gameswf/gameswf_sprite.h
	* gameswf/gameswf_sprite_def.h
	* gameswf/gameswf_text.cpp
	* gameswf/gameswf_text.h
	* gameswf/gameswf_types.cpp
	* gameswf/gameswf_video_impl.cpp