@@ -22,7 +22,7 @@ namespace gameswf
 
 		character* create_character_instance(character* parent, int id);
 		void	read(stream* in, int tag, movie_definition* m);
-		virtual void get_bound(rect& bound);
+		virtual void get_bound(rect* bound);
 
 		Uint16 m_width;
 		Uint16 m_height;
